MetaSwapV3/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metaswap
  labels:
    app.kubernetes.io/name: metaswap-v3
