MetaSwapV3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metaswap-core
  namespace: metaswap
spec:
  type: NodePort
  selector:
    app: metaswap-core
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
